--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
    color:#e5e7eb ;
    margin-top: 0px;
    margin-left: 100px;
-   margin-right:750px;
+   margin-right:720px;
    font-size: smaller;
    background: #3882f6;
    border-radius: 20px;
@@ -91,6 +91,62 @@ img{
    font-weight: bolder;
    color: #1F2937;
    position: absolute;
-   right: 500px;
-   left: 500px;
+   right: 350px;
 }
+.te {
+    display: flex;
+    margin-top: 25px;
+    margin-left: 130px;
+    margin-right: 130px;
+  }
+  
+  .te div {
+    border: 2px solid #3882f6;
+    height: 100px;
+    flex: 1 1 0%;
+    margin-inline-start: 15px;
+    margin-inline-end: 15px;
+    border-radius: 15px;
+
+  }
+  .yo {
+    display: flex;
+    margin: 0px;
+    margin-left: 130px;
+    margin-right: 130px;
+  }
+  
+  .yo div {
+    flex: 1 1 0%;
+    color: #1F2937;
+    font-size: x-small;
+    margin-inline-end: 15px;
+    margin-inline-start: 15px;
+  }
+  .quote{
+      margin-top: 100px;
+      margin-left: 240px;
+      margin-right: 240px;
+      background-color: #e5e7eb;
+  }
+  .back{
+      background-color: #3882f6;
+      margin-top: 150px;
+      margin-left: 190px ;
+      margin-right: 190px;
+      border-radius:10px ;
+  }
+  .first{
+    margin-right: 300px; 
+  }
+  .second{
+      font-size: x-small;
+      margin-right: 300px;
+  }
+  .sign2{
+    color:#e5e7eb ;
+    margin-left: 400px;
+    font-size: smaller;
+    background: #3882f6;
+    border-radius: 20px;
+    text-align: center;}
